# nexus-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/db/: schema.sql
app/models/: document.py  query.py
app/routers/: __init__.py  ingestion.py  retrieval.py
app/services/: embeddings.py  memory_walker.py  query_refiner.py  storage.py
